# debug_await_pyright

./: complete.py  hello.py  my_dep.py  pyproject.toml  sandbox.ipynb  settings.json
